# marlin

./: .gitignore  Cargo.toml  README.md  TODO.md  justfile
.github/workflows/: ci.yml  python-bindings.yml
bindings/python/: .gitignore  CHANGELOG.md  Cargo.toml  GUIDE.md  README.md  pyproject.toml  pyrightconfig.json
bindings/python/examples/: decode_aivdm_log.py  live_ais_dashboard.py  one_shot_no_crlf.py  parse_log_file.py  parse_stdin.py  streaming_tcp_style.py
bindings/python/python/marlin/: __init__.py  __init__.pyi  _core.pyi  aio.py  dataclasses.py
bindings/python/python/marlin/ais/: __init__.py  __init__.pyi
bindings/python/python/marlin/envelope/: __init__.py  __init__.pyi
bindings/python/python/marlin/klv/: __init__.py  __init__.pyi
bindings/python/python/marlin/nmea/: __init__.py  __init__.pyi
bindings/python/src/: ais.rs  envelope.rs  errors.rs  klv.rs  lib.rs  nmea.rs
bindings/python/tests/: conftest.py  test_errors.py  test_import.py
bindings/python/tests/fixtures/: README.md
bindings/python/tests/fixtures/envelope/: 04_rmc_lowercase_checksum.nmea  05_stream_mixed_terminators.nmea  07_streaming_with_garbage.nmea
bindings/python/tests/golden/: test_ais_fixtures.py  test_envelope_fixtures.py  test_klv_fixtures.py  test_nmea_fixtures.py
bindings/python/tests/golden/expected/ais/: 03_aivdm_encapsulation.json
bindings/python/tests/golden/expected/envelope/: 01_gga_basic.json  02_hdt_no_terminator.json  03_aivdm_encapsulation.json  04_rmc_lowercase_checksum.json  05_stream_mixed_terminators.json  06_tagged_sentence.json  07_streaming_with_garbage.json
bindings/python/tests/golden/expected/nmea/: 02_hdt_no_terminator.json  03_aivdm_encapsulation.json  04_rmc_lowercase_checksum.json  05_stream_mixed_terminators.json  06_tagged_sentence.json  07_streaming_with_garbage.json
bindings/python/tests/properties/: test_panic_freedom.py
bindings/python/tests/unit/: test_aio.py  test_ais.py  test_context_managers.py  test_dataclasses.py  test_envelope.py  test_examples.py  test_klv.py  test_nmea.py  test_radar.py
crates/marlin-ais/: CHANGELOG.md  Cargo.toml  README.md
crates/marlin-ais/src/: aivdm.rs  armor.rs  bit_reader.rs  error.rs  extended_position_report_b.rs  lib.rs  message.rs  parser.rs  position_report_a.rs  position_report_b.rs  reassembly.rs  shared_types.rs  static_data_b.rs  static_voyage_a.rs  testing.rs
crates/marlin-klv/: CHANGELOG.md  Cargo.toml  README.md
crates/marlin-klv/src/: ber.rs  checksum.rs  error.rs  lib.rs  scale.rs  st0601.rs  tags.rs  testing.rs
crates/marlin-nmea-0183/: CHANGELOG.md  Cargo.toml  README.md
crates/marlin-nmea-0183/src/: error.rs  lib.rs  message.rs  parser.rs  sentences.rs  testing.rs  util.rs
crates/marlin-nmea-0183/src/sentences/: gga.rs  gll.rs  hdg.rs  hdt.rs  prdid.rs  psxn.rs  rmc.rs  status.rs  tll.rs  ttm.rs  utc_time.rs  vtg.rs
crates/marlin-nmea-envelope/: CHANGELOG.md  Cargo.toml  README.md
crates/marlin-nmea-envelope/src/: error.rs  lib.rs  one_shot.rs  parser.rs  sentence.rs  source.rs  streaming.rs  testing.rs
crates/marlin-nmea-envelope/tests/: golden.rs
crates/marlin-nmea-envelope/tests/fixtures/: 02_hdt_no_terminator.nmea  03_aivdm_encapsulation.nmea  06_tagged_sentence.nmea  README.md
docs/: architecture.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: ais_armor.rs  ais_bit_reader.rs  ais_parser.rs  envelope.rs  klv_decode.rs
fuzz/seeds/: README.md
