[package]
name = "marlin-py"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Python bindings for the marlin NMEA 0183 + AIS parser suite"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39"] }
marlin-nmea-envelope = { path = "../../crates/marlin-nmea-envelope" }
marlin-nmea-0183     = { path = "../../crates/marlin-nmea-0183" }
marlin-ais           = { path = "../../crates/marlin-ais" }

[lints.rust]
# PyO3 macros require `unsafe_code`; workspace forbids it — override here.
# The crate is excluded from the workspace, so lints are per-crate and
# must be declared explicitly rather than inherited.
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
